Connecting blazor pages to Web API

--- a/BlazorLibrarianPage/BlazorLibrarianPage.csproj
+++ b/BlazorLibrarianPage/BlazorLibrarianPage.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorFullStack.Contract\BlazorFullStack.Contract.csproj" />
+  </ItemGroup>
+
 </Project>
